fdo#81547, part1: use ctor reading .ui file, not a resource

This fixes a crash when this tabpage is one of the tabpages in
data series properties dialog (e.g. 3D column chart)

Change-Id: Iacbc689fb410b30515e433bcf4a96c087047ca73